--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.springframework.web= DEBUG
 
+server.port=8089
+
+
+spring.datasource.driver-class-name= org.postgres.Driver
+spring.datasource.url= jdbc:postgresql://172.17.0.2:5432/mydb
+spring.datasource.username= admin
+spring.datasource.password= admin
+
+spring.jpa.show-sql= true
+spring.jpa.hibernate.ddl-auto= update
+spring.jpa.database-platform= org.hibernate.dialect.PostgreSQLDialect
