--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 
-
 #psql -h 172.17.02 -p 5432 -U admin -d mydb
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
+server.port=8080
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-
+logging.level.org.springframework.web=TRACE
+spring.mvc.log-request-details=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= create
+spring.jpa.hibernate.ddl-auto= update
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+springdoc.swagger-ui.path=/swagger-ui.html
