--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 springdoc.swagger-ui.path=/swagger-ui.html
-spring.security.user.name=admin
-spring.security.user.password=wissal
+spring.security.admin.name=admin
+spring.security.admin.password=wissal
+
+
