--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=8080
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-logging.level.org.springframework.web=TRACE
+logging.level.org.springframework.web=DEBUG
 spring.mvc.log-request-details=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
@@ -17,6 +17,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 springdoc.swagger-ui.path=/swagger-ui.html
+
+logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
 spring.security.admin.name=admin
 spring.security.admin.password=wissal
 
