--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #psql -h 172.17.02 -p 5432 -U admin -d mydb
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.open-in-view=false
@@ -19,7 +19,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 springdoc.swagger-ui.path=/swagger-ui.html
 
 logging.level.org.springframework.web.reactive.function.client.ExchangeFunctions=TRACE
-spring.security.admin.name=admin
-spring.security.admin.password=wissal
+#spring.security.admin.name=admin
+#spring.security.admin.password=wissal
 
 
